[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "it-mental-health-env"
version = "1.0.0"
description = "RL benchmark for IT team burnout detection and triage."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "PyYAML",
    "openai"
]
