[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "it-mental-health-env"
version = "1.0.0"
description = "RL benchmark for IT team burnout detection and triage."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "PyYAML",
    "openai",
    "huggingface_hub"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
